Modify : 모델 쬐끔  수정

--- a/backend/api/article/models/article.settings.json
+++ b/backend/api/article/models/article.settings.json
@@ -26,9 +26,10 @@
       "via": "article",
       "collection": "comment"
     },
-    "author": {
-      "via": "articles",
-      "model": "author"
+    "user": {
+      "plugin": "users-permissions",
+      "model": "user",
+      "via": "article"
     }
   }
 }
