Add : article by user

--- a/backend/api/comment/models/comment.settings.json
+++ b/backend/api/comment/models/comment.settings.json
@@ -23,9 +23,9 @@
       "via": "comments"
     },
     "user": {
+      "via": "comments",
       "plugin": "users-permissions",
-      "model": "user",
-      "via": "comments"
+      "model": "user"
     }
   }
 }
