--- a/backend/api/article/models/article.settings.json
+++ b/backend/api/article/models/article.settings.json
@@ -27,9 +27,9 @@
       "collection": "comment"
     },
     "user": {
+      "via": "articles",
       "plugin": "users-permissions",
-      "model": "user",
-      "via": "article"
+      "model": "user"
     }
   }
 }
