--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "knex": "0.21.18",
+    "lodash": "^4.17.21",
     "sqlite3": "5.0.0",
     "strapi": "3.5.3",
     "strapi-admin": "3.5.3",
