--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.13",
     "axios": "^0.21.1",
+    "graphql": "^15.5.0",
     "next": "10.0.9",
     "qs": "^6.10.1",
     "react": "17.0.2",
