--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "knex": "0.21.18",
     "lodash": "^4.17.21",
+    "nodemailer": "^6.5.0",
     "sqlite3": "5.0.0",
     "strapi": "3.5.3",
     "strapi-admin": "3.5.3",
