--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,12 @@
     "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "next": "10.0.9",
+    "next-cookies": "^2.0.3",
+    "nookies": "^2.5.2",
     "qs": "^6.10.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
