--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.13",
+    "@tailwindcss/line-clamp": "^0.2.0",
+    "@tailwindcss/typography": "^0.4.0",
     "@uppy/core": "^1.17.0",
     "@uppy/react": "^1.11.6",
     "@uppy/xhr-upload": "^1.7.2",
