--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,15 @@
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.4",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "graphql": "^15.5.0",
     "next": "10.0.9",
     "nookies": "^2.5.2",
     "qs": "^6.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-ionicons": "^4.2.0",
     "styled-components": "^5.2.3"
   },
