--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "graphql": "^15.5.0",
+    "html-to-draftjs": "1.4.0",
     "next": "10.0.9",
     "nookies": "^2.5.2",
     "qs": "^6.10.1",
