Add : article like 추가, 모델 변경

--- a/backend/api/article/models/article.settings.json
+++ b/backend/api/article/models/article.settings.json
@@ -20,16 +20,22 @@
       "required": true
     },
     "likes": {
-      "type": "integer"
+      "type": "integer",
+      "min": 0
     },
     "comments": {
-      "via": "article",
-      "collection": "comment"
+      "collection": "comment",
+      "via": "article"
     },
     "user": {
-      "via": "articles",
       "plugin": "users-permissions",
-      "model": "user"
+      "model": "user",
+      "via": "articles"
+    },
+    "like_users": {
+      "plugin": "users-permissions",
+      "collection": "user",
+      "via": "like_articles"
     }
   }
 }
